--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# ===============================
+# DATABASE
+# ===============================
 
+spring.neo4j.uri=neo4j:bolt://niveaubonus.fr:7687
+spring.data.neo4j.database = default
+spring.neo4j.authentication.username=neo4j
+spring.neo4j.authentication.password={NEO4J_PASSWORD}
