--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,14 @@
 
 		<dependency>
 			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-jdbc-bolt</artifactId>
-			<version>4.0.1</version>
+			<artifactId>neo4j-ogm-core</artifactId>
+			<version>3.2.21</version>
+		</dependency>
+
+		<dependency> <!-- If you're using the Bolt driver -->
+			<groupId>org.neo4j</groupId>
+			<artifactId>neo4j-ogm-bolt-driver</artifactId>
+			<version>3.2.21</version>
 		</dependency>
 
 	</dependencies>
