--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@
 
 spring.neo4j.uri=bolt://niveaubonus.fr:7687
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password={NEO4J_PASSWORD}
+spring.neo4j.authentication.password=${NEO4J_PASSWORD}
