--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@
 spring.neo4j.uri=bolt+s://niveaubonus.fr:7687
 spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=${NEO4J_PASSWORD}
+
+logging.level.org.springframework.data.neo4j=debug
