--- a/pom.xml
+++ b/pom.xml
@@ -41,13 +41,16 @@
 			<version>3.2.21</version>
 		</dependency>
 
+		<!--
 		<dependency>
 			<groupId>org.neo4j.springframework.data</groupId>
 			<artifactId>spring-data-neo4j-rx-spring-boot-test-autoconfigure</artifactId>
 			<version>1.1.1</version>
 			<scope>test</scope>
 		</dependency>
+		-->
 
+		<!-- To test App -->
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
