--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=${NEO4J_PASSWORD}
 
 logging.level.org.springframework.data.neo4j=debug
-
+server.port:8091
