--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
 			<version>1.15.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
+			<version>2.4.4</version>
+		</dependency>
 
 	</dependencies>
 
