--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 # DATABASE
 # ===============================
 
-#spring.neo4j.uri=bolt+s://niveaubonus.fr:7687
-#spring.neo4j.authentication.username=neo4j
-#spring.neo4j.authentication.password=${NEO4J_PASSWORD}
-
-spring.neo4j.uri=bolt://localhost:7687
+spring.neo4j.uri=bolt+s://niveaubonus.fr:7687
 spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=123
+spring.neo4j.authentication.password=${NEO4J_PASSWORD}
+
+#spring.neo4j.uri=bolt://localhost:7687
+#spring.neo4j.authentication.username=neo4j
+#spring.neo4j.authentication.password=123
 
 logging.level.org.springframework.data.neo4j=debug
 server.port:8091
