--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.neo4j.authentication.password=${NEO4J_PASSWORD}
 #spring.neo4j.authentication.password=123
 
 logging.level.org.springframework.data.neo4j=debug
-server.port:8091
+server.port=8091
