--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
 			<artifactId>java-hamcrest</artifactId>
 			<version>2.0.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 
 	</dependencies>
 
